Delay 2s each step

--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,13 @@ h1 {
     display: inline-block;
 }
 
+.visitted {
+    width: 60px;
+    height: 60px;
+    background-image: url('assets/visitted.svg');
+    display: inline-block;
+}
+
 div {
     line-height: 0px;
 }
